--- a/src/components/navigation_bar/navigation.css
+++ b/src/components/navigation_bar/navigation.css
@@ -1,3 +1,8 @@
+.nav{
+  position: fixed;
+  width: 100%;
+}
+
 .logo
 {
   background-color: white;
@@ -54,9 +59,9 @@
     background-color: white;
     display: inline-block;
     width: fit-content;
-    float: right;
     margin-top: 2rem;
-    margin-right: 8rem;
+    margin-right: 10%;
+    float: right;
 }
 
 .navbar-button
